# PRIMECLIENT1X1

./: .gitignore  README.md  csl_versions.json  index.html  minecraft-log-window.html  package.json  push_to_github.bat  single-log-window.html  tailwind.config.js  test.txt  tester-window.html  updater.html  vite.config.ts
admin-panel/: index.html  package-lock.json  package.json  vite.config.ts
admin-panel/src/: App.tsx  index.css
admin-panel/src-tauri/: Cargo.toml  tauri.conf.json
admin-panel/src-tauri/capabilities/: default.json
admin-panel/src-tauri/icons/: icon.icns
admin-panel/src-tauri/src/: main.rs
changelogs/: 0.6.16.md  0.6.17.md  0.6.18.md  0.6.20.md  0.6.21.md  0.6.22.md
mock-data/primeclient/: 1.21.4-dev-config.json  1.21.5-config.json  prime_modpacks.json  prime_versions.json
packaging/: gg.prime.PrimeClientLauncherV3.desktop  gg.prime.PrimeClientLauncherV3.metainfo.xml
packaging/flatpak/: cargo-sources.json  node-sources.json
src/: App.tsx  main.tsx  minecraftLogWindowEntry.tsx  singleLogWindowEntry.tsx  testerWindowEntry.tsx  updaterEntry.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: analytics_command.rs  assets_command.rs  cape_command.rs  config_commands.rs  content_command.rs  curseforge_commands.rs  deep_link_handler.rs  file_command.rs  flagsmith_commands.rs  friends_command.rs  java_command.rs  minecraft_auth_command.rs  minecraft_command.rs  mod.rs  modrinth_commands.rs  nrc_commands.rs  oauth_error_html.rs  oauth_success_html.rs  pack_rollout_commands.rs  path_commands.rs  permission_commands.rs  process_command.rs  profile_command.rs  tester_command.rs  vanilla_cape_command.rs
src-tauri/src/friends/: api.rs  chat_api.rs  mod.rs  models.rs  websocket.rs
src-tauri/src/integrations/: curseforge.rs  mod.rs  modrinth.rs  mrpack.rs  prime_packs.rs  prime_versions.rs  unified_mod.rs
src-tauri/src/minecraft/: installer.rs  mod.rs
src-tauri/src/minecraft/api/: cape_api.rs  crafatar_api.rs  fabric_api.rs  forge_api.rs  mc_api.rs  mclogs_api.rs  mod.rs  neo_forge_api.rs  payload_cms_api.rs  prime_api.rs  quilt_api.rs  starlight_api.rs  vanilla_cape_api.rs  wordpress_api.rs
src-tauri/src/minecraft/auth/: minecraft_auth.rs
src-tauri/src/minecraft/downloads/: fabric_libraries_download.rs  forge_installer_download.rs  forge_libraries_download.rs  java_download.rs  logging_config_download.rs  mc_assets_download.rs  mc_client_download.rs  mc_libraries_download.rs  mc_natives_download.rs  mod.rs  mod_downloader.rs  mod_resolver.rs  neo_forge_installer_download.rs  neo_forge_libraries_download.rs  prime_assets_download.rs  prime_pack_downloader.rs  quilt_libraries_download.rs
src-tauri/src/minecraft/dto/: fabric_meta.rs  forge_install_profile.rs  forge_maven_meta.rs  forge_meta.rs  java_distribution.rs  minecraft_profile.rs  mod.rs  neo_forge_install_profile.rs  neo_forge_maven_meta.rs  neo_forge_meta.rs  piston_meta.rs  prime_meta.rs  quilt_meta.rs  skin_payloads.rs  version_manifest.rs
src-tauri/src/minecraft/launch/: classpath.rs  forge_arguments.rs  forge_patcher.rs  game_arguments.rs  jvm_arguments.rs  launcher.rs  mod.rs  neo_forge_arguments.rs  neo_forge_patcher.rs  rules.rs  version.rs
src-tauri/src/minecraft/modloader/: fabric_installer.rs  forge_installer.rs  mod.rs  neoforge_installer.rs  quilt_installer.rs
src-tauri/src/state/: config_state.rs  discord_state.rs  event_state.rs  friends_state.rs  mod.rs  post_init.rs  prime_packs_state.rs  prime_versions_state.rs  process_state.rs  profile_state.rs  skin_state.rs  state_manager.rs
src-tauri/src/utils/: api_utils.rs  backup_utils.rs  bounded_log_writer.rs  datapack_utils.rs  debug_utils.rs  deep_link_utils.rs  disk_space_utils.rs  download_utils.rs  file_utils.rs  hash_utils.rs  java_detector.rs  log_archive.rs  mc_utils.rs  migration_utils.rs  mod.rs  network_utils.rs  path_utils.rs  profile_utils.rs  referral_utils.rs  repair_utils.rs  resourcepack_utils.rs  security_utils.rs  serde_utils.rs  server_ping.rs  shaderpack_utils.rs  string_utils.rs  symlink_utils.rs  system_info.rs  trash_utils.rs  updater_utils.rs  world_utils.rs
src-tauri/target_new/debug/.fingerprint/zune-core-ee19a0b61b88b121/: lib-zune_core
src-tauri/tests/: mrpack_test.rs  mrpack_tests.rs
src/components/: ColorPicker.tsx  EffectPreviewCard.tsx  FullscreenEffectRenderer.tsx  RadiusPicker.tsx  RouteErrorBoundary.tsx  ThemeSelector.tsx  (+1 more)
(+388 files in other folders)
