[package]
name = "primeclient-launcher-v3"
version = "1.0.0"
description = "Prime Client Launcher"
authors = ["PrimeClient"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "primeclient_launcher_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart", "cookies"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
thiserror = "1.0"
directories = "5.0"
once_cell = "1.18"
futures = "0.3"
tauri = { version = "2", features = ["protocol-asset", "image-png"] }
tauri-plugin-opener = "2.5.3"
sha1 = "0.10.6"
zip = "2.6.1"
flate2 = "1.0"
tar = "0.4"
async_zip = { version = "0.0.17", features = ["full"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
semver = "1.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"
rand = "0.8.5"
sha2 = "0.10.8"
p256 = "0.13.2"
base64 = "0.21.7"
jsonwebtoken = "9.3.0"

junction = "1.2.0"
byteorder = { version = "1.4" }
tempfile = "3.8"
log = "0.4"
log4rs = { version = "1.3.0", features = ["gzip"] }
async-trait = "0.1.80"
hex = "0.4"
sysinfo = "0.34.2"
sanitize-filename = "0.6.0"
env_logger = "0.11"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2.3.2"
dirs = "6.0.0"
discord-rich-presence = "0.2.3"
regex = "1.10.2"
lazy_static = "1.4.0"
fastnbt = "2.5.0"
craftping = { version = "0.7.0", features = ["async-tokio"] }
trust-dns-resolver = { version = "0.23.0", features = ["tokio-runtime"] }
fs_extra = "1.3.0"
fs4 = { version = "0.8", features = ["tokio"] }
url = "2.5.4"
tauri-plugin-fs = "2.4.5"
fast_image_resize = { version = "5.1.4", features = ["image"] }
image = "0.25.1"
notify = "8.0.0"
futures-lite = "2.6.0"
tauri-plugin-process = "2.3.1"
urlencoding = "2.1.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2"] }
tokio-stream = "0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.9.0"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2.3.7", features = ["deep-link"] }
tauri-plugin-deep-link = "2"
tauri-plugin-cli = "2"
tauri = { version = "2.9.5", features = [ "tray-icon" ] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }
