[package]
name = "primeclient-admin-panel"
version = "0.1.0"
description = "Prime Client Admin Panel"
authors = ["PrimeClient"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }
tokio = { version = "1.0", features = ["full"] }
rfd = "0.16.0"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1.0"
urlencoding = "2.1.3"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
